@@ -1,5 +1,10 @@
 2015-04-26  Natalia Portillo  <claunia@claunia.com>
 
+	* Interop/Apple/Interop.Apple.xattr.cs:
+	  Correct typos.
+
+2015-04-26  Natalia Portillo  <claunia@claunia.com>
+
 	* Claunia.IO.csproj:
 	* Interop/Apple/Interop.Apple.types.cs:
 	* Interop/Apple/Interop.Apple.statfs.cs:
